[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemy_AI.gd" type="Script" id=1]
[ext_resource path="res://Characters/character_0025.png" type="Texture" id=2]
[ext_resource path="res://Characters/character_0026.png" type="Texture" id=3]
[ext_resource path="res://Characters/character_0024.png" type="Texture" id=4]
[ext_resource path="res://Sprites/character_0026_white.png" type="Texture" id=5]
[ext_resource path="res://Sprites/character_0025_white.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 109.639, 114.031 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.07953, 7.95333 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.12206, 1.55846 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.1355, 5.88903 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.82951, -36.6276 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "hit"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.06738, 2.54493 )
shape = SubResource( 3 )

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0.154951, -4.17504 )
shape = SubResource( 5 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 0.078743, 6.77208 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
